--- a/index.html
+++ b/index.html
@@ -9,10 +9,109 @@
 			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="style.css" />
 		<title>Rory Ellis: Full-Stack Software Engineer - Grapevine, TX</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div class="container-fluid main">
+			<header class="container">
+                <div class="row align-items-center">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <p class="nav-link">Find me on:</p>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.linkedin.com/in/roryellis/"
+                                >LinkedIn</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/roryellis">GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-4 title">Rory Ellis</h1>
+                        <p class="lead">Full-Stack Software Engineer</p>
+                    </div>
+                </div>
+            </header>
+            <div class="row">
+                <div class="col">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="card col-sm-6 col-md-4 col-lg-3" >
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Deal Finder - Back-end</h5>
+                                    <p class="card-text">
+                                        Python/Django REST Framework API connecting a PostgreSQL database to my dfndealfinder-react front-end application.
+                                    </p>
+                                    <a href="https://github.com/roryellis/dfndealfinder_api" class="btn btn-primary">GitHub Repo</a>
+                                </div>
+                            </div>
+                            <div class="card col-sm-6 col-md-4 col-lg-3" >
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Deal Finder - Front-end</h5>
+                                    <p class="card-text">
+                                        React.js front-end application utilizing React-Bootstrap components to display localized restaurant data via my dfndealfinder-api.
+                                    </p>
+                                    <a href="https://github.com/roryellis/dfndealfinder_react" class="btn btn-primary">GitHub Repo</a>
+                                    <a href="https://dfndealfinderreact.herokuapp.com/" class="btn btn-primary">App Demo</a>
+                                </div>
+                            </div>
+                            <div class="card col-sm-6 col-md-4 col-lg-3" >
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up the
+                                        bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card col-sm-6 col-md-4 col-lg-3" >
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up the
+                                        bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 18rem;">
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up the
+                                        bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card col-sm-6 col-md-4 col-lg-3" >
+                                <img src="..." class="card-img-top" alt="..." />
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up the
+                                        bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+        </div>
+
+
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
