Added project info to cards, images, live links.

--- a/index.html
+++ b/index.html
@@ -13,104 +13,186 @@
 		<title>Rory Ellis: Full-Stack Software Engineer - Grapevine, TX</title>
 	</head>
 	<body>
-		<div class="container-fluid main">
-			<header class="container">
-                <div class="row align-items-center">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <p class="nav-link">Find me on:</p>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.linkedin.com/in/roryellis/"
-                                >LinkedIn</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/roryellis">GitHub</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h1 class="display-4 title">Rory Ellis</h1>
-                        <p class="lead">Full-Stack Software Engineer</p>
-                    </div>
-                </div>
-            </header>
-            <div class="row">
-                <div class="col">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="card col-sm-6 col-md-4 col-lg-3" >
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Deal Finder - Back-end</h5>
-                                    <p class="card-text">
-                                        Python/Django REST Framework API connecting a PostgreSQL database to my dfndealfinder-react front-end application.
-                                    </p>
-                                    <a href="https://github.com/roryellis/dfndealfinder_api" class="btn btn-primary">GitHub Repo</a>
-                                </div>
-                            </div>
-                            <div class="card col-sm-6 col-md-4 col-lg-3" >
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Deal Finder - Front-end</h5>
-                                    <p class="card-text">
-                                        React.js front-end application utilizing React-Bootstrap components to display localized restaurant data via my dfndealfinder-api.
-                                    </p>
-                                    <a href="https://github.com/roryellis/dfndealfinder_react" class="btn btn-primary">GitHub Repo</a>
-                                    <a href="https://dfndealfinderreact.herokuapp.com/" class="btn btn-primary">App Demo</a>
-                                </div>
-                            </div>
-                            <div class="card col-sm-6 col-md-4 col-lg-3" >
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up the
-                                        bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                            <div class="card col-sm-6 col-md-4 col-lg-3" >
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up the
-                                        bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                            <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up the
-                                        bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                            <div class="card col-sm-6 col-md-4 col-lg-3" >
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up the
-                                        bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-        </div>
-        </div>
+		<header class="container">
+			<div class="row">
+				<div class="col">
+					<ul class="nav">
+						<li class="nav-item">
+							<p class="nav-link">Find me on:</p>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://www.linkedin.com/in/roryellis/" target="_blank" rel="noopener noreferrer"
+								>LinkedIn</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://github.com/roryellis" target="_blank" rel="noopener noreferrer">GitHub</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="jumbotron">
+						<h1 class="display-4 title">Rory Ellis</h1>
+                        <p class="lead">Full-Stack Software Engineer with a Digital Marketing Background</p>
+                        <p class="lead">Experienced in: HTML, CSS, JavaScript, Node.js, React.js, Express.js, Python, Django, PostgreSQL, MongoDB</p>
+                        <a href="/assets/Resume-Rory Ellis.pdf" class="btn btn-primary">Get My Resume</a>
+					</div>
+				</div>
+			</div>
+		</header>
 
+		<section class="row">
+			<div class="col">
+				<div class="container-fluid">
+					<div class="row justify-content-center">
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/dfndealfinder-frontend.png"
+								class="card-img-top"
+								alt="Deal Finder Front-end Application Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Deal Finder: Front-end</h5>
+								<p class="card-text">
+									React.js front-end application utilizing React-Bootstrap
+									components to display localized restaurant data via my
+									dfndealfinder-api.
+								</p>
+								<a
+									href="https://dfndealfinderreact.herokuapp.com/" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>App Demo</a
+								>
+								<a
+									href="https://github.com/roryellis/dfndealfinder_react" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/dfndealfinder-backend.png"
+								class="card-img-top"
+								alt="Deal Finder Backend-end API Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Deal Finder: Back-end</h5>
+								<p class="card-text">
+									Python/Django REST Framework API connecting a PostgreSQL
+									database to my dfndealfinder-react front-end application.
+								</p>
+								<a
+									href="https://github.com/roryellis/dfndealfinder_api" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+						<div class="card ccol-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/essentialcrm-frontend.png"
+								class="card-img-top"
+								alt="Essential CRM Front-end Application Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Essential CRM: Front-end</h5>
+								<p class="card-text">
+									General Assembly Software Engineering Immersive group project.
+									Simple Customer Relationship Management tool using React.js
+									and Bootstrap Front-end with Express/Mongo backend API.
+								</p>
+								<a
+									href="https://essentialcrm.herokuapp.com/" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>App Demo</a
+								>
+								<a
+									href="https://github.com/roryellis/Group-Project-CRM-frontend" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/essentialcrm-backend.png"
+								class="card-img-top"
+								alt="Essential CRM Backend API Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Essential CRM: Back-end</h5>
+								<p class="card-text">
+									General Assembly Software Engineering Immersive group project.
+									Express/Mongoose/Mongo API with JWT authentication.
+								</p>
+								<a
+									href="https://github.com/roryellis/Group-project-CRM-backend" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/ridingweather.png"
+								class="card-img-top"
+								alt="Riding Weather Application Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Riding Weather</h5>
+								<p class="card-text">
+									ReactJS application utilizing a 3rd-party weather API, Google
+									Maps Places Library and Geocoder API, and Navigator WebAPI to
+									offer near real-time weather conditions analysis for planning
+									outdoor activities.
+								</p>
+								<a
+									href="https://ridingweather.herokuapp.com/" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>App Demo</a
+								>
+								<a
+									href="https://github.com/roryellis/ridingweather" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img
+								src="/assets/simon.png"
+								class="card-img-top"
+								alt="Simon Game Recreation Application Preview Image"
+							/>
+							<div class="card-body">
+								<h5 class="card-title">"Simon" Game Recreation</h5>
+								<p class="card-text">
+									Recreation of the classic "Simon" light and sound pattern game
+									with HTML, CSS, and Javascript.
+								</p>
+								<a
+									href="https://roryellis.github.io/simon/" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>App Demo</a
+								>
+								<a
+									href="https://github.com/roryellis/simon" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary"
+									>GitHub Repo</a
+								>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+        </section>
+        <footer>
+			<div class="container">
+				<p>Thanks to <a href="https://unsplash.com/@ari_spada?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener noreferrer">Ari Spada</a> for sharing this beautiful background image on <a href="https://unsplash.com/s/photos/modern?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener noreferrer"> Unsplash</a>.</p> </footer>
+			</div>
 
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
