--- a/index.html
+++ b/index.html
@@ -16,28 +16,13 @@
 		<header class="container">
 			<div class="row">
 				<div class="col">
-					<ul class="nav">
-						<li class="nav-item">
-							<p class="nav-link">Find me on:</p>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="https://www.linkedin.com/in/roryellis/" target="_blank" rel="noopener noreferrer"
-								>LinkedIn</a
-							>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="https://github.com/roryellis" target="_blank" rel="noopener noreferrer">GitHub</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
 					<div class="jumbotron">
 						<h1 class="display-4 title">Rory Ellis</h1>
                         <p class="lead">Full-Stack Software Engineer with a Digital Marketing Background</p>
                         <p class="lead">Experienced in: HTML, CSS, JavaScript, Node.js, React.js, Express.js, Python, Django, PostgreSQL, MongoDB</p>
-                        <a href="/assets/Resume-Rory Ellis.pdf" class="btn btn-primary">Get My Resume</a>
+						<a class="btn btn-primary" href="https://www.linkedin.com/in/roryellis/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+						<a href="/assets/Resume-Rory Ellis.pdf" class="btn btn-primary">Resume</a>
+						<a class="btn btn-primary" href="https://github.com/roryellis" target="_blank" rel="noopener noreferrer">GitHub</a>
 					</div>
 				</div>
 			</div>
