Added blank target to Resume button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <p class="lead">Full-Stack Software Engineer with a Digital Marketing Background</p>
                         <p class="lead">Experienced in: HTML, CSS, JavaScript, Node.js, React.js, Express.js, Python, Django, PostgreSQL, MongoDB</p>
 						<a class="btn btn-primary" href="https://www.linkedin.com/in/roryellis/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-						<a href="/assets/Resume-Rory Ellis.pdf" class="btn btn-primary">Resume</a>
+						<a href="/assets/Resume-Rory Ellis.pdf" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Resume</a>
 						<a class="btn btn-primary" href="https://github.com/roryellis" target="_blank" rel="noopener noreferrer">GitHub</a>
 					</div>
 				</div>
