Added code challenges card

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
 								>
 							</div>
 						</div>
+						<div class="card col-sm-12 col-md-4 col-lg-3">
+							<img src="/assets/code-challenges.png" class="card-img-top" alt="Code Challenges Preview Image" />
+							<div class="card-body">
+								<h5 class="card-title">Code-Challenges: </h5>
+								<p class="card-text">
+									Solutions to various code challenges for some visibility into my thought process and coding style. Solutions and prompts are modified slightly from originals to avoid spoiling the learning/discover process for anyone. 
+								</p>
+								<a href="https://github.com/roryellis/code-challenges" target="_blank" rel="noopener noreferrer"
+									class="btn btn-primary">GitHub Repo</a>
+							</div>
+						</div>
 						<div class="card ccol-sm-12 col-md-4 col-lg-3">
 							<img
 								src="/assets/essentialcrm-frontend.png"
