Adjusted code challenge card text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Code-Challenges: </h5>
 								<p class="card-text">
-									Solutions to various code challenges for some visibility into my thought process and coding style. Solutions and prompts are modified slightly from originals to avoid spoiling the learning/discover process for anyone. 
+									Solutions to various code challenges for some visibility into my thought process and coding style. Solutions and prompts are modified slightly from originals to avoid spoiling the learning process for anyone. 
 								</p>
 								<a href="https://github.com/roryellis/code-challenges" target="_blank" rel="noopener noreferrer"
 									class="btn btn-primary">GitHub Repo</a>
